Fixed .wok-mask class and loaders inside collapsable panels

--- a/ui/css/src/modules/_loaders.scss
+++ b/ui/css/src/modules/_loaders.scss
@@ -38,6 +38,10 @@
     }
 }
 
+.panel-group .wok-mask {
+    top: 0 !important;
+}
+
 .wok-mask-loading, .wok-grid-loading, .wok-list-loading {
     width: 100%;
     white-space: nowrap;
